--- a/docs/ReleaseProcess.org
+++ b/docs/ReleaseProcess.org
@@ -74,4 +74,4 @@ When the [branch](https://github.com/org2blog/org2blog/tree/X.Y.Z) is merged I'l
 After day or two when it seems OK I'll tag it.
   #+end_src
 - [ ] Merge branch into ~master~ push it.
-- [ ] Wait a day or two to make sure it is OK then tag it.
+- [ ] Wait a day or two to make sure it's OK then tag it.
